<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
	<!-- Grupo onde estara nossa biblioteca -->
    <groupId>br.edu.materdei</groupId>
	<!--  -->
    <artifactId>materdei-spring-primefaces</artifactId>
	<!-- Versão do que esta sendo trabalhada -->
    <version>1.0</version>
	<!-- Tipo do pacote que será gerado no build -->
    <packaging>war</packaging>
	<!-- Nome do projeto -->
    <name>materdei-spring-primefaces</name>
	
	
	<!-- lista de repositórios on-line (De onde é feito o download das bibliotecas) -->
    <repositories>
        <repository>
            <id>prime-repo</id>
            <name>PrimeFaces Maven Repository</name>
            <url>http://repository.primefaces.org</url>
            <layout>default</layout>
        </repository>
        <repository>
            <id>sonatype-releases</id>
            <name>Sonatype Releases Repository</name>
            <url>http://oss.sonatype.org/content/repositories/releases/</url>
        </repository>         
    </repositories>

	<!-- definição de propriedades - nome / valor -->
    <properties>
        <quartz.version>1.8.5</quartz.version>
        <commons.el.version>1.0</commons.el.version>
        <myview.version>1.0</myview.version>
        <servlet.api.version>2.4</servlet.api.version>
        <primefaces.theme.version>1.0.8</primefaces.theme.version>
        <commons.lang.version>2.6</commons.lang.version>
        <cglib.version>2.2.2</cglib.version>
        <commons.pool.version>1.6</commons.pool.version>
        <commons.dbcp.version>1.4</commons.dbcp.version>
        <postgre.version>9.1-901.jdbc4</postgre.version>
        <spring.version>3.1.1.RELEASE</spring.version>
        <jsf.version>2.1.6</jsf.version>
        <jstl.version>1.2</jstl.version>
        <primefaces.version>3.4.1</primefaces.version>
        <hibernate.core.version>4.1.7.Final</hibernate.core.version>
        <javasist.version>3.9.0.GA</javasist.version>
        <c3p0.version>0.9.1.2</c3p0.version>
        <log4j.version>1.2.16</log4j.version>
        <testng.version>6.8</testng.version>
        <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

	<!-- lista de dependencias de bibliotecas(.jars) usados na aplicação e respectiva versão -->
    <dependencies>
        
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<version>${spring.version}</version>
		</dependency>
	 
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${spring.version}</version>
		</dependency>
	 
		<dependency>
			<groupId>org.quartz-scheduler</groupId>
			<artifactId>quartz</artifactId>
			<version>${quartz.version}</version>
		</dependency>        
        
        <dependency>
            <groupId>servletapi</groupId>
            <artifactId>servlet-api</artifactId>
            <version>${servlet.api.version}</version>
        </dependency>        
        
        <dependency>
            <groupId>org.lindbergframework.web</groupId>
            <artifactId>lindbergframework-myview</artifactId>
            <version>${myview.version}</version>
        </dependency>
        
        <dependency>
            <groupId>commons-el</groupId>
            <artifactId>commons-el</artifactId>
            <version>${commons.el.version}</version>
        </dependency> 
        
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>${commons.lang.version}</version>
        </dependency>

        <dependency>
            <groupId>org.primefaces.themes</groupId>
			<artifactId>glass-x</artifactId>
            <!-- <artifactId>bootstrap</artifactId> -->
            <version>${primefaces.theme.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-pool</groupId>
            <artifactId>commons-pool</artifactId>
            <version>${commons.pool.version}</version>
        </dependency>

        <dependency>
            <groupId>cglib</groupId>
            <artifactId>cglib-nodep</artifactId>
            <version>${cglib.version} </version>
        </dependency>

        <dependency>
            <groupId>commons-dbcp</groupId>
            <artifactId>commons-dbcp</artifactId>
            <version>${commons.dbcp.version}</version>
        </dependency>

		<!-- 
        <dependency>
            <groupId>postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>${postgre.version}</version>
        </dependency>
        -->
        
        <!-- MySql -->
        <dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.25</version>
		</dependency>
		
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-tx</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-orm</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <dependency>
            <groupId>com.sun.faces</groupId>
            <artifactId>jsf-api</artifactId>
            <version>${jsf.version}</version>
        </dependency>

        <dependency>
            <groupId>com.sun.faces</groupId>
            <artifactId>jsf-impl</artifactId>
            <version>${jsf.version}</version>
        </dependency>

        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jstl</artifactId>
            <version>${jstl.version}</version>
        </dependency>

        <dependency>
            <groupId>org.primefaces</groupId>
            <artifactId>primefaces</artifactId>
            <version>${primefaces.version}</version>
        </dependency>
        
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>${hibernate.core.version}</version>
        </dependency>
            		
        <dependency>
            <groupId>javassist</groupId>
            <artifactId>javassist</artifactId>
            <version>${javasist.version}</version>
        </dependency>
		
        <dependency>
            <groupId>c3p0</groupId>
            <artifactId>c3p0</artifactId>
            <version>${c3p0.version}</version>
        </dependency>
 		
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>${log4j.version}</version>
        </dependency>
		
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
        </dependency>
	
		<dependency>
			<groupId>com.sun.el</groupId>
			<artifactId>el-ri</artifactId>
			<version>1.0</version>
		</dependency>
		
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>

    </dependencies>

	<!-- informações para o build do projeto -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.0.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.cargo</groupId>
                <artifactId>cargo-maven2-plugin</artifactId>
                <version>1.2.4</version>
                <configuration>
                    <container>
                        <containerId>tomcat6x</containerId>
                    </container>
                    <configuration>
                        <properties>
                            <cargo.jvmargs>"-Xmx512m -XX:MaxPermSize=128m"</cargo.jvmargs>
                        </properties>
                    </configuration>
                </configuration>
            </plugin>
        </plugins>
    </build>
	
</project>